@@ -6,6 +6,7 @@
 - Added Gyroscope support in Input, implemented for Android, see https://github.com/libgdx/libgdx/pull/3594
 - Fixed touch mapping on iOS, see https://github.com/libgdx/libgdx/pull/3590
 - Added orientation to Box2D Transform class, see https://github.com/libgdx/libgdx/pull/3308
+- Added system cursors to GWT, fix 'Ibeam' system cursor not working on LWJGL3.
 
 [1.8.0]
 - API Change: Rewrote FreeType shadow rendering (much better).
